tests/suite/snapshots/suite__parse__tests__parse__length03-2.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 36
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/length03-2.xi:2:3]
   │
 2 │   length(a)
   ·   ───┬──  
   ·      ╰──── Unexpected token
───╯

